--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.facebook.stetho:stetho:1.3.0'
 }
